# permutations

./: Cargo.toml  README.md  input  output
src/: .main.rs.swp  cli.yml  main.rs  tests.rs
